# LuaEditor

./: .gitignore  .ninja_deps  .ninja_log  CMakeLists.txt  README.md  build.ninja  build.sh  kl
LuaAutoCompleteQt6_autogen/: deps  mocs_compilation.cpp
LuaAutoCompleteQt6_autogen/UVLADIE3JM/: moc_AutoCompleter.cpp.d  moc_LuaEditor.cpp.d  moc_LuaHighlighter.cpp.d  moc_LuaParser.cpp.d  moc_MainWindow.cpp.d
examples/: hello_world.lua
resources/: README.md  luaautocomplete.desktop.in
src/: AutoCompleter.cpp  AutoCompleter.h  LuaEditor.cpp  LuaEditor.h  LuaHighlighter.cpp  LuaHighlighter.h  LuaParser.cpp  LuaParser.h  MainWindow.cpp  MainWindow.h  main.cpp
tests/: CMakeLists.txt  test_autocompleter.cpp  test_parser.cpp
tests/test_data/: asa  lua_test_class.lua  sample.lua  sample2.lua
